Novo contato e matérias cursadas

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,8 @@
     <input type="text" placeholder="Digite seu e-mail" name"nome" required>
     <br><br>
 
+    <text>Me adicione no <a href="https://www.linkedin.com/in/tiagolimaa">Linkedin/a></text>
+
     <text>Motivo do contato: </text><br>
     <input type="radio" name="op" value="reclamacoes"> Reclamações<br>
     <input type="radio" name="op" value="sugestoes"> Sugestões<br>
