--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
             <td>Desenvolvimento Web</td>
             <td>5º Semestre</td>
           </tr>
+          <tr>
+            <td>Qualidade de software</td>
+            <td>5º Semestre</td>
+          </tr>
+
         </tbody>
       </table>
       
